--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -1,9 +1,9 @@
-<UserControl x:Class="SimHaptics.SettingsControl"
+<UserControl x:Class="sierses.SimHap.SettingsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:SimHaptics"
+             xmlns:local="clr-namespace:sierses.SimHap"
              xmlns:styles="clr-namespace:SimHub.Plugins.Styles;assembly=SimHub.Plugins"
              xmlns:ui="clr-namespace:SimHub.Plugins.UI;assembly=SimHub.Plugins">
   <FrameworkElement.Resources>
