--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -140,10 +140,10 @@
           </StackPanel>
           <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                       VerticalAlignment="Center">
-            <TextBlock>SimHaptics</TextBlock>
+            <TextBlock>SimHap</TextBlock>
             <TextBlock Name="Version" MinWidth="50" Margin="5,0,0,0"/>
           </StackPanel>
-          <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Grid.Row="2" Grid.Column="2" Margin="330,0,0,0">
+          <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="2">
             <styles:SHButtonSecondary Click="Lock_Click" FrameworkElement.Name="Lock" ContentControl.Content="{Binding D.LockedText}"/>
             <styles:SHButtonSecondary Click="Refresh_Click" FrameworkElement.Name="Refresh">Refresh</styles:SHButtonSecondary>
           </StackPanel>
