--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:sierses.SimHap"
              xmlns:styles="clr-namespace:SimHub.Plugins.Styles;assembly=SimHub.Plugins"
-             xmlns:ui="clr-namespace:SimHub.Plugins.UI;assembly=SimHub.Plugins">
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance}">
   <FrameworkElement.Resources>
     <Style x:Key="IconRectangle" TargetType="{x:Type Rectangle}">
       <Setter Property="UIElement.Opacity" Value="0.9"/>
