--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -1,10 +1,10 @@
-<UserControl x:Class="sierses.SimHap.SettingsControl"
+<UserControl x:Class="sierses.Sim.SettingsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:styles="clr-namespace:SimHub.Plugins.Styles;assembly=SimHub.Plugins"
-			 xmlns:local="clr-namespace:sierses.SimHap"
+			 xmlns:local="clr-namespace:sierses.Sim"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance}">
     <FrameworkElement.Resources>
