--- a/Themes/GreenTheme.xaml
+++ b/Themes/GreenTheme.xaml
@@ -3,4 +3,7 @@
     <SolidColorBrush x:Key="Light"  Color="#67AD1F"/>
     <SolidColorBrush x:Key="Mid"  Color="#548E19"/>
     <SolidColorBrush x:Key="Dark"  Color= "#3C5A1F"/>
+    <SolidColorBrush x:Key="Foreground" Color="White" />
+    <SolidColorBrush x:Key="Background" Color="#252525" />
+    <SolidColorBrush x:Key="Slider" Color="White" />
 </ResourceDictionary>
