--- a/Themes/OrangeTheme.xaml
+++ b/Themes/OrangeTheme.xaml
@@ -3,4 +3,7 @@
     <SolidColorBrush x:Key="Light"  Color="#E86508"/>
     <SolidColorBrush x:Key="Mid"  Color="#CF5A07"/>
     <SolidColorBrush x:Key="Dark"  Color= "#7A4016"/>
+    <SolidColorBrush x:Key="Foreground" Color="White" />
+    <SolidColorBrush x:Key="Background" Color="#252525" />
+    <SolidColorBrush x:Key="Slider" Color="White" />
 </ResourceDictionary>
