--- a/Themes/PurpleTheme.xaml
+++ b/Themes/PurpleTheme.xaml
@@ -2,4 +2,7 @@
     <SolidColorBrush x:Key="Light" Color="#6057BF" />
     <SolidColorBrush x:Key="Mid" Color="#4B4495" />
     <SolidColorBrush x:Key="Dark" Color="#38326E" />
+    <SolidColorBrush x:Key="Foreground" Color="White" />
+    <SolidColorBrush x:Key="Background" Color="#252525" />
+    <SolidColorBrush x:Key="Slider" Color="White" />
 </ResourceDictionary>
