--- a/Themes/SteelTheme.xaml
+++ b/Themes/SteelTheme.xaml
@@ -2,4 +2,7 @@
     <SolidColorBrush x:Key="Light" Color="#6C7D8F" />
     <SolidColorBrush x:Key="Mid" Color="#576573" />
     <SolidColorBrush x:Key="Dark" Color="#3E454C" />
+    <SolidColorBrush x:Key="Foreground" Color="White" />
+    <SolidColorBrush x:Key="Background" Color="#252525" />
+    <SolidColorBrush x:Key="Slider" Color="White" />
 </ResourceDictionary>
