--- a/Themes/CrimsonLightTheme.xaml
+++ b/Themes/CrimsonLightTheme.xaml
@@ -3,8 +3,8 @@
     <SolidColorBrush x:Key="Light"  Color="#A1082B"/>
     <SolidColorBrush x:Key="Mid"  Color="#890725"/>
     <SolidColorBrush x:Key="Dark"  Color= "#571625"/>
-    <SolidColorBrush x:Key="Foreground" Color="White" />
-    <SolidColorBrush x:Key="Background" Color="#252525" />
-    <SolidColorBrush x:Key="Slider" Color="White" />
+    <SolidColorBrush x:Key="Foreground" Color="Black" />
+    <SolidColorBrush x:Key="Background" Color="White" />
+    <SolidColorBrush x:Key="Slider" Color="#890725" />
     <SolidColorBrush x:Key="Tab" Color="White" />
 </ResourceDictionary>
