--- a/Themes/AmberLightTheme.xaml
+++ b/Themes/AmberLightTheme.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#119EDA" />
-    <SolidColorBrush x:Key="Mid" Color="#1585B5" />
-    <SolidColorBrush x:Key="Dark" Color="#1D556D" />
+    <SolidColorBrush x:Key="Light" Color="#E09A11" />
+    <SolidColorBrush x:Key="Mid" Color="#C7890F" />
+    <SolidColorBrush x:Key="Dark" Color="#76571A" />
     <SolidColorBrush x:Key="Foreground" Color="Black" />
     <SolidColorBrush x:Key="Background" Color="White" />
-    <SolidColorBrush x:Key="Slider" Color="#1585B5" />
+    <SolidColorBrush x:Key="Slider" Color="#C7890F" />
     <SolidColorBrush x:Key="Tab" Color="White" />
 </ResourceDictionary>
