--- a/Themes/GreenLightTheme.xaml
+++ b/Themes/GreenLightTheme.xaml
@@ -3,8 +3,8 @@
     <SolidColorBrush x:Key="Light"  Color="#67AD1F"/>
     <SolidColorBrush x:Key="Mid"  Color="#548E19"/>
     <SolidColorBrush x:Key="Dark"  Color= "#3C5A1F"/>
-    <SolidColorBrush x:Key="Foreground" Color="White" />
-    <SolidColorBrush x:Key="Background" Color="#252525" />
-    <SolidColorBrush x:Key="Slider" Color="White" />
+    <SolidColorBrush x:Key="Foreground" Color="Black" />
+    <SolidColorBrush x:Key="Background" Color="White" />
+    <SolidColorBrush x:Key="Slider" Color="#548E19" />
     <SolidColorBrush x:Key="Tab" Color="White" />
 </ResourceDictionary>
