--- a/Themes/MagentaTheme.xaml
+++ b/Themes/MagentaTheme.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#119EDA" />
-    <SolidColorBrush x:Key="Mid" Color="#1585B5" />
-    <SolidColorBrush x:Key="Dark" Color="#1D556D" />
+    <SolidColorBrush x:Key="Light" Color="#C1076A" />
+    <SolidColorBrush x:Key="Mid" Color="#B40763" />
+    <SolidColorBrush x:Key="Dark" Color="#6C1644" />
     <SolidColorBrush x:Key="Foreground" Color="White" />
     <SolidColorBrush x:Key="Background" Color="#252525" />
     <SolidColorBrush x:Key="Slider" Color="White" />
