--- a/Themes/OrangeLightTheme.xaml
+++ b/Themes/OrangeLightTheme.xaml
@@ -3,8 +3,8 @@
     <SolidColorBrush x:Key="Light"  Color="#E86508"/>
     <SolidColorBrush x:Key="Mid"  Color="#CF5A07"/>
     <SolidColorBrush x:Key="Dark"  Color= "#7A4016"/>
-    <SolidColorBrush x:Key="Foreground" Color="White" />
-    <SolidColorBrush x:Key="Background" Color="#252525" />
-    <SolidColorBrush x:Key="Slider" Color="White" />
+    <SolidColorBrush x:Key="Foreground" Color="Black" />
+    <SolidColorBrush x:Key="Background" Color="White" />
+    <SolidColorBrush x:Key="Slider" Color="#CF5A07" />
     <SolidColorBrush x:Key="Tab" Color="White" />
 </ResourceDictionary>
