--- a/Themes/PurpleTheme.xaml
+++ b/Themes/PurpleTheme.xaml
@@ -5,4 +5,5 @@
     <SolidColorBrush x:Key="Foreground" Color="White" />
     <SolidColorBrush x:Key="Background" Color="#252525" />
     <SolidColorBrush x:Key="Slider" Color="White" />
+    <SolidColorBrush x:Key="Tab" Color="White" />
 </ResourceDictionary>
