--- a/Themes/TealLightTheme.xaml
+++ b/Themes/TealLightTheme.xaml
@@ -1,9 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="Light" Color="#119EDA" />
-    <SolidColorBrush x:Key="Mid" Color="#1585B5" />
-    <SolidColorBrush x:Key="Dark" Color="#1D556D" />
+    <SolidColorBrush x:Key="Light" Color="#08A3A0" />
+    <SolidColorBrush x:Key="Mid" Color="#07908E" />
+    <SolidColorBrush x:Key="Dark" Color="#165A5A" />
     <SolidColorBrush x:Key="Foreground" Color="Black" />
     <SolidColorBrush x:Key="Background" Color="White" />
-    <SolidColorBrush x:Key="Slider" Color="#1585B5" />
+    <SolidColorBrush x:Key="Slider" Color="#07908E"/>
     <SolidColorBrush x:Key="Tab" Color="White" />
 </ResourceDictionary>
