Engine Tone RepeatButton Click=

--- a/settingscontrol.xaml
+++ b/settingscontrol.xaml
@@ -1987,6 +1987,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
+										Click="F1_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2019,6 +2020,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
+										Click="F1_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2052,6 +2054,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
+										Click="F2_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2084,6 +2087,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
+										Click="F2_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2116,6 +2120,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
+										Click="H1_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2148,6 +2153,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
+										Click="H1_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2181,6 +2187,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
+										Click="H2_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2213,6 +2220,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
+										Click="H2_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2247,6 +2255,7 @@
                                         Margin="2,10,0,0"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
+										Click="H3_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2279,6 +2288,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
+										Click="H3_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2312,6 +2322,7 @@
                                         Margin="2,10,0,0"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
+										Click="H4_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2344,6 +2355,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Light}"
                                         BorderBrush="Transparent"
+										Click="H4_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2377,6 +2389,7 @@
                                         Margin="2,10,0,0"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
+										Click="H5_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2409,6 +2422,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Dark}"
                                         BorderBrush="Transparent"
+										Click="H5_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
@@ -2443,6 +2457,7 @@
                                         Margin="2,10,0,0"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
+										Click="H6_increment_Click"
                                         FontFamily="roboto black"
                                         FontSize="32"
                                         Foreground="White"
@@ -2475,6 +2490,7 @@
                                         Margin="2"
                                         Background="{DynamicResource Mid}"
                                         BorderBrush="Transparent"
+										Click="H6_decrement_Click"
                                         FontFamily="roboto black"
                                         FontSize="45"
                                         Foreground="White"
